Fix navbar dropdown item align (#33782)
1.23 only

Fix #33781

--- a/web_src/css/modules/navbar.css
+++ b/web_src/css/modules/navbar.css
@@ -47,10 +47,6 @@
   display: flex;
 }
 
-#navbar .dropdown .item {
-  justify-content: stretch;
-}
-
 #navbar a.item:hover,
 #navbar button.item:hover {
   background: var(--color-nav-hover-bg);
